# phosph_rs

./: Cargo.toml  README.md  build.rs
examples/cornell_box/: Cargo.toml
examples/cornell_box/src/: average_to_buf.wgsl  buf_rgb_to_tex_rgba.wgsl  main.rs
src/: bindings.wesl  bindings.wgsl  bindings_no_vertex_return.wgsl  bindings_vertex_return.wgsl  camera.rs  default_intersection_handler.wesl  default_intersection_handler.wgsl  intersection.wesl  intersection_handlers.rs  lib.rs  low_level.rs  textures.rs
src/data_buffer/: end_of_frame.wesl  end_of_frame.wgsl  mod.rs
src/data_buffers/: mod.rs
src/debug/: front_face.wesl  front_face.wgsl  mod.rs  reflectance.wgsl  tangent.wgsl
src/importance_sampling/: importance_sampler.wesl  importance_sampler.wgsl  mod.rs  shared.wesl  shared.wgsl
src/path_tracing/: general.wesl  general.wgsl  high.wesl  high.wgsl  low.wesl  low.wgsl  medium.wesl  medium.wgsl  mod.rs
src/tests/: mod.rs
