workspace = { members = [ "examples/cornell_box"] }
[package]
name = "phosph_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "27"
futures = "0.3.30"
bytemuck = { version =  "1.22.0", features = ["derive"] }
cgmath = "0.18"
half = "2.4.1"
bitflags = "2.9"

[dependencies.image]
version = "0.25.1"
default-features = false
features = ["png", "jpeg"]

[dev-dependencies]
log = { version = "0.4.22", features = ["max_level_trace"] }
env_logger = "0.11"
glfw = "0.59.0"

[features]
# This feature disables the requirement of `EXPERIMENTAL_RAY_HIT_VERTEX_RETURN`.
# This requires additional user tracking requirements which
# can cause issues if incorrectly done. It is recommended
# that this is enabled *after* intergration with an
# application is complete and the bugs are fixed.
no-vertex-return = []
wip-features = []