[package]
name = "cornell_box"
version = "0.1.0"
edition = "2021"

[dependencies]
phosph_rs = { path = "../../", features = ["wip-features"]}
wgpu = "27"
futures = "0.3.30"
bytemuck = { version =  "1.22.0", features = ["derive"] }
cgmath = "0.18"
glfw = "0.59.0"
oidn = { version = "2.2.4", optional = true }
env_logger = "0.11"

[dependencies.image]
version = "0.25.1"
default-features = false
features = ["png", "jpeg"]

[features]
# Requires putting oidn into the correct directory (see its docs)
denoise = ["oidn"]

[lints.rust]
# This feature disables the requirement of `EXPERIMENTAL_RAY_HIT_VERTEX_RETURN`.
# This requires additional user tracking requirements which
# can cause issues if incorrectly done. It is recommended
# that this is enabled *after* intergration with an
# application is complete and the bugs are fixed.
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(no_vertex_return)'] }